# CMake__BuildInfo

./: .gitignore  README.md  build-info.cmake  build-info.h.in  gen-hdr.cmake.in
example/: CMakeLists.txt  README.md  main.c
